force-app/main/default/objects/Account__x/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <externalDeveloperName>Industry</externalDeveloperName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ad Agency</fullName>
            </value>
            <value>
                <fullName>Brand Manager</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Management Company</fullName>
            </value>
            <value>
                <fullName>Marketing Firm</fullName>
            </value>
            <value>
                <fullName>Web Design</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>