force-app/main/default/objects/Account__x/fields/Last_Web_Pref_report_Sent_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Last_Web_Pref_report_Sent_Date_c__c</fullName>
    <externalDeveloperName>Last_Web_Pref_report_Sent_Date__c</externalDeveloperName>
    <inlineHelpText>Which date was the Web Preference report sent over to Client?</inlineHelpText>
    <label>Last Web Pref report Sent Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>