force-app/main/default/objects/Account__x/fields/Market_Segment_c__c.field-meta.xml
<CustomField>
    <fullName>Market_Segment_c__c</fullName>
    <externalDeveloperName>Market_Segment__c</externalDeveloperName>
    <label>Market Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Luxury</fullName>
            </value>
            <value>
                <fullName>Upscale</fullName>
            </value>
            <value>
                <fullName>Midscale</fullName>
            </value>
            <value>
                <fullName>Economy</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>