force-app/main/default/objects/Account__x/fields/Next_Steps_GMS_c__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps_GMS_c__c</fullName>
    <externalDeveloperName>Next_Steps_GMS__c</externalDeveloperName>
    <inlineHelpText>Quick comment on what next GMS steps will be taken.</inlineHelpText>
    <label>Next Steps - GMS</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>