force-app/main/default/objects/Account__x/fields/Number_of_Hotels_in_Group_c__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hotels_in_Group_c__c</fullName>
    <externalDeveloperName>Number_of_Hotels_in_Group__c</externalDeveloperName>
    <label>Number of Hotels in Group</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>