force-app/main/default/objects/Account__x/fields/Ownership_Group_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Group_Name_c__c</fullName>
    <externalDeveloperName>Ownership_Group_Name__c</externalDeveloperName>
    <label>Ownership Group Name</label>
    <length>255</length>
    <referenceTo>Account__x</referenceTo>
    <relationshipLabel>TC Accounts</relationshipLabel>
    <relationshipName>TC_Accounts</relationshipName>
    <type>ExternalLookup</type>
</CustomField>