force-app/main/default/objects/Account__x/fields/Ownership_Group_TC__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Group_TC__c</fullName>
    <externalDeveloperName>Ownership_Group_TC__c</externalDeveloperName>
    <label>Ownership Group (TC)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>