force-app/main/default/objects/Account__x/fields/Pegs_Property_Code_c__c.field-meta.xml
<CustomField>
    <fullName>Pegs_Property_Code_c__c</fullName>
    <externalDeveloperName>Pegs_Property_Code__c</externalDeveloperName>
    <label>Pegs Property Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>