force-app/main/default/objects/Account__x/fields/PMS_Integration_Product_c__c.field-meta.xml
<CustomField>
    <fullName>PMS_Integration_Product_c__c</fullName>
    <externalDeveloperName>PMS_Integration_Product__c</externalDeveloperName>
    <label>PMS Integration Product</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DataBridge</fullName>
            </value>
            <value>
                <fullName>PMS Connect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>