force-app/main/default/objects/Account__x/fields/PMS_Vendor_c__c.field-meta.xml
<CustomField>
    <fullName>PMS_Vendor_c__c</fullName>
    <externalDeveloperName>PMS_Vendor__c</externalDeveloperName>
    <inlineHelpText>Property Management System</inlineHelpText>
    <label>PMS Vendor</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5Stelle</fullName>
            </value>
            <value>
                <fullName>AC2G by AutoClerk</fullName>
            </value>
            <value>
                <fullName>Amadeus PMS</fullName>
            </value>
            <value>
                <fullName>APMA by Amadeus</fullName>
            </value>
            <value>
                <fullName>Ares PMS</fullName>
            </value>
            <value>
                <fullName>Arion PMS by Arion Hospitality Solutions</fullName>
            </value>
            <value>
                <fullName>Arpon by Arpon Enterprise</fullName>
            </value>
            <value>
                <fullName>ASI by Anand Systems</fullName>
            </value>
            <value>
                <fullName>Asterio by Sequoiasoft</fullName>
            </value>
            <value>
                <fullName>Atrio PMS by Springer Miller (SMS)</fullName>
            </value>
            <value>
                <fullName>Availpro</fullName>
            </value>
            <value>
                <fullName>Availpro Smart Channel Manager</fullName>
            </value>
            <value>
                <fullName>Avalon</fullName>
            </value>
            <value>
                <fullName>Avalon by Antfor</fullName>
            </value>
            <value>
                <fullName>BeeWizard PM ( Bespoke)</fullName>
            </value>
            <value>
                <fullName>BookingPlanner by Cubilis</fullName>
            </value>
            <value>
                <fullName>CBP by Sequoiasoft</fullName>
            </value>
            <value>
                <fullName>Cenium</fullName>
            </value>
            <value>
                <fullName>Chapp Solutions</fullName>
            </value>
            <value>
                <fullName>Charts Portal Interface by Online Systems Australia</fullName>
            </value>
            <value>
                <fullName>Check-Inn by Innsoft</fullName>
            </value>
            <value>
                <fullName>CHLOE by Sphère Informatique​</fullName>
            </value>
            <value>
                <fullName>choiceADVANTAGE</fullName>
            </value>
            <value>
                <fullName>Chorum PMS (formerly Clud PM by MSI)</fullName>
            </value>
            <value>
                <fullName>CHR365</fullName>
            </value>
            <value>
                <fullName>Clarity by Diamond</fullName>
            </value>
            <value>
                <fullName>Clarity_Hotel_Manager</fullName>
                <label>Clarity Hotel Manager</label>
            </value>
            <value>
                <fullName>ClarityLive Hotel Manager by Clarity Commerce</fullName>
            </value>
            <value>
                <fullName>Clever Reservation by Palace Resorts</fullName>
            </value>
            <value>
                <fullName>Clock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>