force-app/main/default/objects/Account__x/fields/Premier_Service_Manager_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Premier_Service_Manager_Name_c__c</fullName>
    <externalDeveloperName>Premier_Service_Manager_Name__c</externalDeveloperName>
    <label>Premier Service Manager Name</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>