force-app/main/default/objects/Account__x/fields/Rally_Risk_Retention_c__c.field-meta.xml
<CustomField>
    <fullName>Rally_Risk_Retention_c__c</fullName>
    <externalDeveloperName>Rally_Risk_Retention__c</externalDeveloperName>
    <inlineHelpText>Used to define the retention risk associated with specific Groups/Accounts and used by the L3 team for prioritization of tickets.</inlineHelpText>
    <label>Rally Risk Retention</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - High</fullName>
            </value>
            <value>
                <fullName>2 - Medium</fullName>
            </value>
            <value>
                <fullName>3 - Low</fullName>
            </value>
            <value>
                <fullName>4 - Leaving</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>