force-app/main/default/objects/Account__x/fields/Related_Account_c__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_c__c</fullName>
    <externalDeveloperName>Related_Account__c</externalDeveloperName>
    <label>Related Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>