force-app/main/default/objects/Account__x/fields/Res_Processor_TC__c.field-meta.xml
<CustomField>
    <fullName>Res_Processor_TC__c</fullName>
    <externalDeveloperName>Res_Processor_TC__c</externalDeveloperName>
    <label>Res Processor (TC)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>