force-app/main/default/objects/Account__x/fields/Revenue_Bundle_c__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Bundle_c__c</fullName>
    <externalDeveloperName>Revenue_Bundle__c</externalDeveloperName>
    <label>Revenue-Res Bundle</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>