force-app/main/default/objects/Account__x/fields/Revenue_Media_c__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Media_c__c</fullName>
    <externalDeveloperName>Revenue_Media__c</externalDeveloperName>
    <label>Revenue-Media</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>