force-app/main/default/objects/Account__x/fields/RMS_Provider_c__c.field-meta.xml
<CustomField>
    <fullName>RMS_Provider_c__c</fullName>
    <externalDeveloperName>RMS_Provider__c</externalDeveloperName>
    <inlineHelpText>Revenue Management System Provider</inlineHelpText>
    <label>RMS Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Infor EzRMS</fullName>
            </value>
            <value>
                <fullName>Rainmaker</fullName>
            </value>
            <value>
                <fullName>LodgIQ</fullName>
            </value>
            <value>
                <fullName>PriceMatch</fullName>
            </value>
            <value>
                <fullName>IDeaS G2</fullName>
            </value>
            <value>
                <fullName>IDeaS G3</fullName>
            </value>
            <value>
                <fullName>Duetto</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>