force-app/main/default/objects/Account__x/fields/Rubicon_Property_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Rubicon_Property_ID_c__c</fullName>
    <externalDeveloperName>Rubicon_Property_ID__c</externalDeveloperName>
    <label>Rubicon Property ID</label>
    <length>40</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>