force-app/main/default/objects/Account__x/fields/Sabre_Property_Code_c__c.field-meta.xml
<CustomField>
    <fullName>Sabre_Property_Code_c__c</fullName>
    <externalDeveloperName>Sabre_Property_Code__c</externalDeveloperName>
    <label>Sabre Property Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>