force-app/main/default/objects/Account__x/fields/Sabre_Revenue_Actual_Estimated_Flag_c__c.field-meta.xml
<CustomField>
    <fullName>Sabre_Revenue_Actual_Estimated_Flag_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Sabre_Revenue_Actual_Estimated_Flag__c</externalDeveloperName>
    <label>Sabre Revenue Actual/Estimated Flag</label>
    <type>Checkbox</type>
</CustomField>