force-app/main/default/objects/Account__x/fields/Sabre_Revenue_Through_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Sabre_Revenue_Through_Date_c__c</fullName>
    <externalDeveloperName>Sabre_Revenue_Through_Date__c</externalDeveloperName>
    <label>Revenue Through Date</label>
    <type>Date</type>
</CustomField>