force-app/main/default/objects/Account__x/fields/Sabre_Travel_Agent_Through_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Sabre_Travel_Agent_Through_Date_c__c</fullName>
    <externalDeveloperName>Sabre_Travel_Agent_Through_Date__c</externalDeveloperName>
    <label>Sabre Travel Agent Through Date</label>
    <type>Date</type>
</CustomField>