force-app/main/default/objects/Account__x/fields/SEO_Reporting_Schedule_c__c.field-meta.xml
<CustomField>
    <fullName>SEO_Reporting_Schedule_c__c</fullName>
    <externalDeveloperName>SEO_Reporting_Schedule__c</externalDeveloperName>
    <label>Optimization Schedule</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Bi Annual</fullName>
            </value>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>WPP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>