force-app/main/default/objects/Account__x/fields/SEO_Status_c__c.field-meta.xml
<CustomField>
    <fullName>SEO_Status_c__c</fullName>
    <externalDeveloperName>SEO_Status__c</externalDeveloperName>
    <inlineHelpText>SEO Product Status</inlineHelpText>
    <label>Digital Marketing Status</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>