force-app/main/default/objects/Account__x/fields/Setup_Fee_c__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee_c__c</fullName>
    <externalDeveloperName>Setup_Fee__c</externalDeveloperName>
    <label>Setup Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>