force-app/main/default/objects/Account__x/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <externalDeveloperName>Site</externalDeveloperName>
    <label>Property Site</label>
    <length>80</length>
    <type>Text</type>
</CustomField>