force-app/main/default/objects/Account__x/fields/SSL_Certificate_c__c.field-meta.xml
<CustomField>
    <fullName>SSL_Certificate_c__c</fullName>
    <externalDeveloperName>SSL_Certificate__c</externalDeveloperName>
    <label>SSL Certificate</label>
    <length>150</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>