force-app/main/default/objects/Account__x/fields/STR_Casino_c__c.field-meta.xml
<CustomField>
    <fullName>STR_Casino_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>STR_Casino__c</externalDeveloperName>
    <label>STR Casino</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>