force-app/main/default/objects/Account__x/fields/STR_Independent_c__c.field-meta.xml
<CustomField>
    <fullName>STR_Independent_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>STR_Independent__c</externalDeveloperName>
    <label>STR Independent</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>