force-app/main/default/objects/Account__x/fields/STR_Last_Updated_c__c.field-meta.xml
<CustomField>
    <fullName>STR_Last_Updated_c__c</fullName>
    <externalDeveloperName>STR_Last_Updated__c</externalDeveloperName>
    <label>STR Last Updated</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>