force-app/main/default/objects/Account__x/fields/STR_Price_c__c.field-meta.xml
<CustomField>
    <fullName>STR_Price_c__c</fullName>
    <externalDeveloperName>STR_Price__c</externalDeveloperName>
    <label>STR Price</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Number</type>
</CustomField>