force-app/main/default/objects/Account__x/fields/STR_Project_ID_c__c.field-meta.xml
<CustomField>
    <fullName>STR_Project_ID_c__c</fullName>
    <externalDeveloperName>STR_Project_ID__c</externalDeveloperName>
    <label>STR Project ID</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>