force-app/main/default/objects/Account__x/fields/Support_Hours_Available_c__c.field-meta.xml
<CustomField>
    <fullName>Support_Hours_Available_c__c</fullName>
    <externalDeveloperName>Support_Hours_Available__c</externalDeveloperName>
    <inlineHelpText>Hours purchased minus hours used.</inlineHelpText>
    <label>Support Hours Available</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>