force-app/main/default/objects/Account__x/fields/Support_Manager_c__c.field-meta.xml
<CustomField>
    <fullName>Support_Manager_c__c</fullName>
    <externalDeveloperName>Support_Manager__c</externalDeveloperName>
    <inlineHelpText>Used only by EMEA to Indicate Premier Support Manager.</inlineHelpText>
    <label>Support Manager</label>
    <length>18</length>
    <type>Text</type>
</CustomField>