force-app/main/default/objects/Account__x/fields/SWOT_c__c.field-meta.xml
<CustomField>
    <fullName>SWOT_c__c</fullName>
    <externalDeveloperName>SWOT__c</externalDeveloperName>
    <inlineHelpText>Quick comment on Strength, Weakness, Opportunity and/or Threat.</inlineHelpText>
    <label>SWOT</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>