force-app/main/default/objects/Account__x/fields/Target_Reopening_c__c.field-meta.xml
<CustomField>
    <fullName>Target_Reopening_c__c</fullName>
    <externalDeveloperName>Target_Reopening__c</externalDeveloperName>
    <inlineHelpText>When is the hotel targeting to reopen?</inlineHelpText>
    <label>Target Reopening</label>
    <type>Date</type>
</CustomField>