force-app/main/default/objects/Account__x/fields/TC_Chain_Code_c__c.field-meta.xml
<CustomField>
    <fullName>TC_Chain_Code_c__c</fullName>
    <externalDeveloperName>TC_Chain_Code__c</externalDeveloperName>
    <label>(TC) Chain Code</label>
    <length>40</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>