force-app/main/default/objects/Account__x/fields/Territory_c__c.field-meta.xml
<CustomField>
    <fullName>Territory_c__c</fullName>
    <externalDeveloperName>Territory__c</externalDeveloperName>
    <label>Territory*</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>