force-app/main/default/objects/Account__x/fields/Total_Bookings_c__c.field-meta.xml
<CustomField>
    <fullName>Total_Bookings_c__c</fullName>
    <externalDeveloperName>Total_Bookings__c</externalDeveloperName>
    <label>Total Bookings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>