force-app/main/default/objects/Account__x/fields/Total_Room_Nights_c__c.field-meta.xml
<CustomField>
    <fullName>Total_Room_Nights_c__c</fullName>
    <externalDeveloperName>Total_Room_Nights__c</externalDeveloperName>
    <label>Total Room Nights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>