force-app/main/default/objects/Account__x/fields/Total_Rooms_for_all_Hotels_in_Group_c__c.field-meta.xml
<CustomField>
    <fullName>Total_Rooms_for_all_Hotels_in_Group_c__c</fullName>
    <externalDeveloperName>Total_Rooms_for_all_Hotels_in_Group__c</externalDeveloperName>
    <label>Total Rooms for all Hotels in Group</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>