force-app/main/default/objects/Account__x/fields/Updated_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Updated_Date_c__c</fullName>
    <externalDeveloperName>Updated_Date__c</externalDeveloperName>
    <label>Updated Date</label>
    <type>Date</type>
</CustomField>