force-app/main/default/objects/Account__x/fields/View_Account_in_NM_Org_c__c.field-meta.xml
<CustomField>
    <fullName>View_Account_in_NM_Org_c__c</fullName>
    <externalDeveloperName>View_Account_in_NM_Org__c</externalDeveloperName>
    <inlineHelpText>“Clicking this link will open the Account record in the New Market Salesforce Org. You must have a login to the NM Org to view the record. If this account is not mapped to an account in the New Market Org then &quot;Not Mapped to TC Org&quot; will be displayed.”</inlineHelpText>
    <label>View Account in Hospitality Org</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>