force-app/main/default/objects/Account__x/fields/Web_Performance_Dashboard_Link_c__c.field-meta.xml
<CustomField>
    <fullName>Web_Performance_Dashboard_Link_c__c</fullName>
    <externalDeveloperName>Web_Performance_Dashboard_Link__c</externalDeveloperName>
    <label>Web Performance Dashboard Link</label>
    <type>Url</type>
</CustomField>