force-app/main/default/objects/Account__x/fields/Website_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Website_Type_c__c</fullName>
    <externalDeveloperName>Website_Type__c</externalDeveloperName>
    <label>Website Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Custom Prime</fullName>
            </value>
            <value>
                <fullName>HTB</fullName>
            </value>
            <value>
                <fullName>HTB-Custom Permium</fullName>
            </value>
            <value>
                <fullName>HTB-Custom Pro</fullName>
            </value>
            <value>
                <fullName>HTK</fullName>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
            <value>
                <fullName>Non-TravelClick Site</fullName>
            </value>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Web Builder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>