force-app/main/default/objects/Account__x/fields/WorldSpan_Chain_Code_c__c.field-meta.xml
<CustomField>
    <fullName>WorldSpan_Chain_Code_c__c</fullName>
    <externalDeveloperName>WorldSpan_Chain_Code__c</externalDeveloperName>
    <label>WorldSpan Chain Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>