force-app/main/default/objects/Account__x/fields/WorldSpan_Property_Code_c__c.field-meta.xml
<CustomField>
    <fullName>WorldSpan_Property_Code_c__c</fullName>
    <externalDeveloperName>WorldSpan_Property_Code__c</externalDeveloperName>
    <label>WorldSpan Property Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>