force-app/main/default/objects/Account__x/fields/Zuora_Currency_c__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Currency_c__c</fullName>
    <externalDeveloperName>Zuora_Currency__c</externalDeveloperName>
    <label>Zuora Currency</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>NZD</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>