force-app/main/default/objects/Account__x/fields/Zuora_CustomerPriority_c__c.field-meta.xml
<CustomField>
    <fullName>Zuora_CustomerPriority_c__c</fullName>
    <externalDeveloperName>Zuora__CustomerPriority__c</externalDeveloperName>
    <label>Customer Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>