force-app/main/default/objects/Account__x/fields/Zuora_SLA_c__c.field-meta.xml
<CustomField>
    <fullName>Zuora_SLA_c__c</fullName>
    <externalDeveloperName>Zuora__SLA__c</externalDeveloperName>
    <label>SLA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>