force-app/main/default/objects/Account__x/fields/Zuora_SLAExpirationDate_c__c.field-meta.xml
<CustomField>
    <fullName>Zuora_SLAExpirationDate_c__c</fullName>
    <externalDeveloperName>Zuora__SLAExpirationDate__c</externalDeveloperName>
    <label>SLA Expiration Date</label>
    <type>Date</type>
</CustomField>