force-app/main/default/objects/Account__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name__c</columns>
    <columns>AccountNumber__c</columns>
    <columns>EZY_ID_c__c</columns>
    <columns>iHotelier_License_ID_c__c</columns>
    <columns>Account_Owner_Name_c__c</columns>
    <columns>ShippingCity__c</columns>
    <columns>ShippingState__c</columns>
    <columns>ShippingCountry__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>